Bug Squashing

--- a/style.css
+++ b/style.css
@@ -18,21 +18,6 @@ body {
 .gray {
     color: #aaa !important;
 }
-#loading-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 9999;
-    opacity: 1;
-    transition: opacity 0.5s ease-out;
-}
 #close-modal-button {
     position: absolute;
     padding: 0;
@@ -76,7 +61,9 @@ nav {
     font-family: 'Fugaz One', sans-serif !important;
     font-size: 2vw !important;
     font-weight: 500 !important;
-    margin-right: 35vw !important;
+    text-align: left !important;
+    margin-right: 45vw;
+    margin-bottom: 0.5vw;
 }
 .menu {
     display: flex;
@@ -84,15 +71,17 @@ nav {
     gap: 3vw;
 }
 .menu .menu-item {
+    text-align: right;
     text-decoration: none;
     font-family: 'Fira Sans', sans-serif;
     font-size: 1.25vw;
     font-weight: 600;
     color: #fff;
     position: relative;
-    display: inline-block;
+    display: inline-flex;
     cursor: pointer;
     transition: transform 0.3s ease;
+    gap: 0.3vw;
 }
 .menu .menu-item:hover {
     transform: scale(1.1);
@@ -150,6 +139,9 @@ nav {
 .dropdown-arrow {
     margin-left: 0.125vw;
     transition: transform 0.3s ease;
+    flex-shrink: 0;
+    width: 1vw;
+    height: 1vw;
 }
 .dropdown:hover .dropdown-arrow {
     transform: rotate(180deg);
@@ -224,6 +216,7 @@ p {
     transform: translateY(-50%);
     width: 2vw;
     height: 2vw;
+    vertical-align: middle; 
 }
 .category-buttons {
     display: flex;
